--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,6 +39,16 @@ typecheck:
     - if: $CI_MERGE_REQUEST_IID
     - if: $CI_COMMIT_BRANCH =~ /^(main|master|dev|dev-refactor)$/
 
+security-audit:
+  stage: quality
+  script:
+    - npm audit --audit-level=high
+  needs: [install]
+  allow_failure: true
+  rules:
+    - if: $CI_MERGE_REQUEST_IID
+    - if: $CI_COMMIT_BRANCH =~ /^(main|master|dev|dev-refactor)$/
+
 build:
   stage: build
   script:
