--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 # Optional: For enhanced security in production
 # VITE_APP_URL=https://your-app-domain.com
 # VITE_ENABLE_ANALYTICS=false
+
+# PII Lockdown: set to 'true' to enable maintenance mode (tools only, no data pages)
+# VITE_MAINTENANCE_MODE=false
